--- a/cookit-backend/package.json
+++ b/cookit-backend/package.json
@@ -8,8 +8,23 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^2.1.4",
+    "buffer":"^6.0.3",
+    "url":"^0.11.0",
+    "path":"^0.12.7",
+    "util":"0.12.4",
+    "fs":"^0.0.1-security",
+    "http":"^0.0.1-security",
+    "net":"^1.0.2",
+    "crypto":"^1.0.1",
+    "cookie-parser":"^1.4.6",
+    "morgan":"^1.10.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "scripts": {
     "start": "react-scripts start",
