--- a/cookit-backend/package.json
+++ b/cookit-backend/package.json
@@ -19,7 +19,10 @@
     "net":"^1.0.2",
     "crypto":"^1.0.1",
     "cookie-parser":"^1.4.6",
-    "morgan":"^1.10.0"
+    "morgan":"^1.10.0",
+    "cors":"^2.8.5",
+    "async_hooks":"1.0.0",
+    "jade":"^1.11.0"
   },
   "browser": {
     "fs": false,
@@ -27,27 +30,6 @@
     "os": false
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "start": "node src/App.js"
+  } 
 }
