--- a/cookit-backend/package.json
+++ b/cookit-backend/package.json
@@ -6,23 +6,26 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "async_hooks": "1.0.0",
+    "buffer": "^6.0.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "jade": "^1.11.0",
+    "morgan": "^1.10.0",
+    "net": "^1.0.2",
+    "path": "^0.12.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.4",
-    "buffer":"^6.0.3",
-    "url":"^0.11.0",
-    "path":"^0.12.7",
-    "util":"0.12.4",
-    "fs":"^0.0.1-security",
-    "http":"^0.0.1-security",
-    "net":"^1.0.2",
-    "crypto":"^1.0.1",
-    "cookie-parser":"^1.4.6",
-    "morgan":"^1.10.0",
-    "cors":"^2.8.5",
-    "async_hooks":"1.0.0",
-    "jade":"^1.11.0"
+    "sequelize": "6.21.0",
+    "sequelize-cli":"6.4.1",
+    "mysql2":"2.3.3",
+    "url": "^0.11.0",
+    "util": "0.12.4",
+    "web-vitals": "^2.1.4"
   },
   "browser": {
     "fs": false,
@@ -31,5 +34,8 @@
   },
   "scripts": {
     "start": "node src/App.js"
-  } 
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
