--- a/cookit-backend/src/.env
+++ b/cookit-backend/src/.env
@@ -1,6 +1,5 @@
-SECRET=supersecret
+#.env
+NODE_ENV=development
 HOST=127.0.0.1
 PORT=4000
-DATABASE_NAME=TestUser
-DB_PORT=27017 
-UPLOAD_DIR= imagenes/
+SECRET=56ab984hj
