--- a/cookit-backend/package.json
+++ b/cookit-backend/package.json
@@ -25,7 +25,10 @@
     "mysql2":"2.3.3",
     "url": "^0.11.0",
     "util": "0.12.4",
+    "cloudinary":"1.30.0",
     "web-vitals": "^2.1.4",
+    "formidable": "^1.2.2",
+    "bluebird": "^3.5.1",
     "nodemon":"2.0.18"
   },
   "browser": {
